2005-04-18  Michael Franz  <mvfranz@gmail.com>
	
	* FAQ/FAQ.debugging: Added new informations on how to debug kaffe
	easily.

2005-04-18  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-03-28  Tom Tromey  <tromey@redhat.com>

        * java/lang/ClassLoader.java (loadClass): Resolve class even if
        it was already found.

2005-04-17  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-03-28  Tom Tromey  <tromey@redhat.com>

        * java/net/URL.java (DEFAULT_SEARCH_PATH): Added
        org.metastatic.jessie.

2005-04-17  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-03-28  Sven de Marothy  <sven@physto.se>

        * gnu/java/io/decode/DecoderUnicodeBig.java,
        * gnu/java/io/decode/DecoderUnicodeLittle.java,
        * gnu/java/io/encode/EncoderUnicodeBig.java,
        * gnu/java/io/encode/EncoderUnicodeLittle.java:
        New files.

2005-04-17  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-03-26  Chris Burdess  <dog@gnu.org>

        * gnu/xml/dom/DomNode.java (notifyNode): grow listener array as
        required.

2005-04-17  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-03-26  Jeroen Frijters  <jeroen@frijters.net>

        * java/awt/image/PixelGrabber.java (setPixels(int,int,int,int,
        ColorModel,byte[],int,int): Fixed byte to int conversion.

2005-04-17  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-03-26  Jeroen Frijters  <jeroen@frijters.net>

        * javax/imageio/spi/IIORegistry.java (IIORegistry):
        Don't assume that awt Toolkit is always ClasspathToolkit.

2005-04-17  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-03-23  Andrew John Hughes  <gnu_andrew@member.fsf.org>

        * gnu/xml/dom/html2/DomHTMLParser.java
        Changed 'enum' references to become 'enumeration'.

	2005-03-21  Audrius Meskauskas  <audriusa@bluewin.ch>
