@@ -7,6 +7,15 @@
 
 	Resynced with GNU Classpath.
 
+	2005-03-29  Jeroen Frijters  <jeroen@frijters.net>
+
+        * gnu/classpath/SystemProperties.java (static): Converted encoding
+        aliases to lower case and removed redudant aliases.
+
+2005-04-18  Dalibor Topic  <robilad@kaffe.org>
+
+	Resynced with GNU Classpath.
+
 	2005-03-28  Tom Tromey  <tromey@redhat.com>
 
         * java/lang/ClassLoader.java (loadClass): Resolve class even if
